# custom_regex_lint

./: .pre-commit-hooks.yaml  Cargo.toml  README.md
src/: main.rs
